# MailSync-API

./: .drone.yml  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  build.gradle  log4rs.yaml  settings.gradle
.github/workflows/: codeql-analysis.yml
migrations/: V1__initial.sql  V2__messages_processed_rename_user.sql  V3__messages_add_date.sql  V4__messages_add_body_mime.sql  V5__messages_convert_body_to_longtext.sql  V6__add_config_table.sql  V7__messages_convert_body_mime_to_text.sql  V8__configs_add_rule_type.sql
src/: env.rs  error.rs  main.rs
src/api/: gmail.rs  mod.rs
src/endpoints/: mod.rs
src/endpoints/mail/: inbox.rs  message.rs
src/endpoints/settings/: mod.rs  update.rs
src/endpoints/user/: add.rs  list.rs  remove.rs
src/main/java/nl/mrfriendly/espogmailsync/: App.java  Environment.java
src/main/java/nl/mrfriendly/espogmailsync/database/: SqlManager.java
src/main/java/nl/mrfriendly/espogmailsync/runnables/: EspoAccountSyncRunnableV2.java  EspoContactSyncRunnableV2.java  FetchMailThreadV2.java
src/main/java/nl/mrfriendly/espogmailsync/springcontrollers/: Authentication.java  GetController.java  PostController.java
src/main/java/nl/mrfriendly/espogmailsync/utils/: EspoUtils.java  Utils.java
src/main/java/nl/mrfriendly/mailsync/: App.java  Environment.java
src/main/java/nl/thedutchmc/espogmailsync/: App.java  Config.java  Environment.java  EspoUtils.java  GetController.java  PostController.java  URLBuilder.java  User.java
src/threads/: espo_contacts.rs  inbox.rs  mod.rs
(+91 files in other folders)
